# tbai_ros

./: .gitignore  .gitmodules  README.md  experiments.md  full_rosbag_topics.txt  get_results.py  justfile  pixi.toml  rosbag_topics.txt  ruff.toml  tbai.bash  tbai_ros.bash
tbai/: CMakeLists.txt  package.xml
tbai_ros_bob/: CMakeLists.txt
tbai_ros_bob/config/: config_anymal_d_perceptive.yaml  config_anymal_d_perceptive_cupy.yaml  config_go2_blind.yaml  config_go2_no_vel_blind.yaml  config_go2_no_vel_noise_blind.yaml
tbai_ros_bob/include/tbai_ros_bob/: BobController.hpp
tbai_ros_bob/launch/: anymal_d_blind.launch  anymal_d_mapping.launch  anymal_d_perceptive.launch  anymal_d_rosbag.launch  deploy_go2_no_vel_noise_blind.launch  elevation_mapping.launch  go2_blind.launch  go2_no_vel_blind.launch  go2_no_vel_noise_blind.launch
tbai_ros_bob/launch/rviz/: robot.rviz  rosbag.rviz
tbai_ros_bob/src/: BobController.cpp  Visualizers.cpp  simple_perceptive.cpp
tbai_ros_context_aware/: CMakeLists.txt  package.xml
tbai_ros_context_aware/config/: default_config copy.yaml  default_config.yaml
tbai_ros_context_aware/launch/: simple.launch
tbai_ros_context_aware/src/: simple.cpp
tbai_ros_core/: CMakeLists.txt  package.xml
tbai_ros_core/include/tbai_ros_core/: Publishers.hpp  Rate.hpp  Rotations.hpp  Subscribers.hpp  Types.hpp  Utils.hpp
tbai_ros_core/src/: Subscribers.cpp
tbai_ros_core/src/config/: YamlConfig.cpp
tbai_ros_core/src/control/: CentralController.cpp  StateSubscriber.cpp  Subscribers.cpp
tbai_ros_core/test/: testConfig.cpp
tbai_ros_deploy_go2/tbai_ros_deploy_go2_mpc/: CMakeLists.txt  README.md  package.xml
tbai_ros_deploy_go2/tbai_ros_deploy_go2_mpc/config/: controllers.info  deploy_go2_mpc.yaml
tbai_ros_deploy_go2/tbai_ros_deploy_go2_mpc/launch/: deploy_go2_mpc.launch  visualize_go2.launch
tbai_ros_deploy_go2/tbai_ros_deploy_go2_mpc/src/: deploy_go2_mpc.cpp  go2_gait_node.cpp  go2_joystick_node.cpp
tbai_ros_deploy_go2/tbai_ros_deploy_go2_rl/: CMakeLists.txt  README.md  package.xml
tbai_ros_deploy_go2/tbai_ros_deploy_go2_rl/config/: cupy_parameters_go2.yaml  deploy_go2_rl.yaml  deploy_go2_rl_mppi.yaml  elevation_mapping.yaml  elevation_mapping_go2.yaml  elevation_mapping_go2_cupy.yaml  post_processing_go2.yaml
tbai_ros_deploy_go2/tbai_ros_deploy_go2_rl/launch/: deploy_go2_np3o.launch  deploy_go2_np3o_mppi.launch  dummy_mapping.launch  go2_mapping.launch  rosbag_visualize.launch
tbai_ros_deploy_go2/tbai_ros_deploy_go2_rl/scripts/: dummy_mapping.py
tbai_ros_deploy_go2/tbai_ros_deploy_go2_rl/src/: deploy_go2_rl.cpp  go2_joystick_node.cpp
tbai_ros_deploy_go2/tbai_ros_deploy_go2_safe/: CMakeLists.txt  README.md  package.xml
tbai_ros_deploy_go2/tbai_ros_deploy_go2_safe/config/: deploy_go2_safe.yaml
tbai_ros_deploy_go2/tbai_ros_deploy_go2_safe/launch/: deploy_go2_safe.launch
tbai_ros_deploy_go2/tbai_ros_deploy_go2_safe/src/: deploy_go2_safe.cpp  go2_joystick_node.cpp  tbai_safe_node_naive.py
tbai_ros_g1_rl/: CMakeLists.txt  README.md  package.xml
tbai_ros_g1_rl/config/: default_config_g1.yaml
tbai_ros_g1_rl/launch/: simple_g1.launch
tbai_ros_g1_rl/src/: G1RlController.cpp  simple.cpp
tbai_ros_gazebo/: CMakeLists.txt  controller_plugins.xml  package.xml  reset_gazebo.sh  run_experiment.sh
tbai_ros_gazebo/launch/: world.launch
tbai_ros_gazebo/src/: ContactSensor.cpp  JointController.cpp  RobotStatePublisher.cpp  StatePublisher.cpp
tbai_ros_go2_deploy/: CMakeLists.txt  package.xml
tbai_ros_go2_deploy/launch/: deploy_go2_bob_blind.launch  deploy_go2_mpc_blind.launch  deploy_go2_np3o.launch  deploy_go2_static.launch
tbai_ros_go2_deploy/src/: deploy_go2_bob_blind.cpp
tbai_ros_gridmap/: CMakeLists.txt  package.xml
tbai_ros_gridmap/config/: convex_plane_decomposition_node.yaml  elevation_mapping.yaml  elevation_mapping_cupy.yaml  post_processing.yaml
tbai_ros_gridmap/launch/: elevation_mapping.launch
tbai_ros_gridmap/src/: GridmapInterface.cpp
tbai_ros_joe/: CMakeLists.txt  README.md  package.xml
tbai_ros_joe/config/: default_config.yaml
tbai_ros_joe/launch/: simple.launch
tbai_ros_joe/src/: JoeController.cpp  simple.cpp
tbai_ros_mpc/: CMakeLists.txt  README.md  package.xml
tbai_ros_mpc/launch/: anymal_d_blind.launch  anymal_d_perceptive.launch  anymal_d_rosbag.launch  elevation_mapping.launch  go2_blind.launch  go2_deploy_blind.launch  go2_perceptive.launch
tbai_ros_mpc/src/: MpcController.cpp  MpcNode.cpp  simple.cpp  simple_perceptive.cpp
tbai_ros_mpc_blind/: CMakeLists.txt  README.md  package.xml
tbai_ros_mpc_blind/config/: default_config.yaml
tbai_ros_mpc_blind/launch/: robot.rviz  simple.launch  simple_anymal_d.launch  simple_go2.launch  simple_go2_deploy.launch
tbai_ros_mpc_blind/src/: simple.cpp  simple_deploy_go2.cpp
tbai_ros_msgs/: CMakeLists.txt  package.xml
tbai_ros_msgs/msg/: EstimatedState.msg  RbdState.msg  RobotState.msg
tbai_ros_reference/: CMakeLists.txt  package.xml
tbai_ros_reference/src/: ReferenceVelocityGenerator.cpp
tbai_ros_rl_blind/: CMakeLists.txt  README.md  package.xml
tbai_ros_rl_blind/config/: default_config_anymal_d.yaml  default_config_go2.yaml  default_config_go2_no_vel.yaml  default_config_go2_no_vel_noise.yaml
tbai_ros_rl_blind/launch/: simple_anymal_d.launch  simple_go2.launch  simple_go2_deploy.launch  simple_go2_no_vel.launch  simple_go2_no_vel_noise.launch
tbai_ros_rl_blind/models/: go2_blind_no_vel_noise.pt
tbai_ros_rl_blind/src/: simple.cpp
tbai_ros_rl_perceptive/: CMakeLists.txt  README.md  package.xml
tbai_ros_rl_perceptive/config/: default_config.yaml
tbai_ros_rl_perceptive/launch/: simple.launch
tbai_ros_rl_perceptive/src/: simple.cpp
tbai_ros_safe/: CMakeLists.txt  README.md  package.xml
tbai_ros_safe/launch/: simple_go2_safe.launch
tbai_ros_safe/src/: tbai_safe_node.py  tbai_safe_node_mppi.py  tbai_safe_node_naive.py  virtual_joystick.py
tbai_ros_utils/: CMakeLists.txt  package.xml
tbai_ros_utils/scripts/: virtual_joystick.py
tbai_ros_utils/src/: global_path_velocity_generator.py  virtual_joystick.py
(+205 files in other folders)
