<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_context_aware</name>
  <version>0.0.0</version>
  <description>The tbai_ros_context_aware package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tbai_ros_mpc</depend>
  <depend>tbai_ros_rl</depend>
  <depend>tbai_ros_core</depend>
  <depend>tbai_ros_msgs</depend>
  <depend>tbai_ros_static</depend>

  <export>
  </export>
</package>