<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_gazebo</name>
  <version>0.0.0</version>
  <description>The tbai_ros_gazebo package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tbai_ros_core</depend>
  <depend>tbai_ros_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <export>
      <controller_interface plugin="${prefix}/controller_plugins.xml"/>
  </export>
  
</package>