<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_go2_deploy</name>
  <version>0.0.0</version>
  <description>The tbai_ros_go2_deploy package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tbai_ros_np3o</depend>
  <depend>tbai_ros_mpc</depend>
  <depend>tbai_ros_bob</depend>
  <depend>tbai_ros_static</depend>
  <depend>tbai_ros_utils</depend>
  <depend>tbai_ros_core</depend>

  <export>
  </export>
</package>