<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_gridmap</name>
  <version>0.0.0</version>
  <description>The tbai_ros_gridmap package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>
  <depend>roscpp</depend>
  <depend>tbai_ros_core</depend>
  <depend>tbai</depend>

  <export>
  </export>
</package>