<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_reference</name>
  <version>0.0.0</version>
  <description>The tbai_ros_reference package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tbai</depend>
  <depend>tbai_ros_core</depend>

  <export>
  </export>
</package>