<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_rl_blind</name>
  <version>0.0.0</version>
  <description>The tbai_ros_rl_blind package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tbai_ros_core</depend>
  <depend>tbai_ros_static</depend>
  <depend>tbai_ros_rl</depend>
  <depend>tbai_ros_utils</depend>
  <depend>tbai</depend>

  <export>
  </export>
</package>