<?xml version="1.0"?>
<package format="2">
  <name>tbai_ros_safe</name>
  <version>0.0.0</version>
  <description>The tbai_ros_safe package</description>

  <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tbai_ros_msgs</depend>
  <depend>tbai_ros_np3o</depend>

  <export>
  </export>
  
</package>