<?xml version="1.0"?>
<package format="3">
  <name>tbai_ros_utils</name>
  <version>0.0.0</version>
  <description>The tbai_ros_utils package</description>

  <maintainer email="mass@gatech.edu">Max Asselmeier</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>                               
   <build_type>ament_cmake</build_type>
  </export>
  
</package>